feat: Add REST APIs for manipulating highlights. Fixes #620
