# packages/shared/types/pagination.ts
@@ -1,0 +1,6 @@
+import { z } from "zod";
+
+export const zCursorV2 = z.object({
+  createdAt: z.date(),
+  id: z.string(),
+});
